Fix for bug 36362.  We no longer null out the ref count of form elements in their Release() methods before deleting them.  This fixes the crashes on www.cnn.com and www.msn.com.