content/html/content/src/nsHTMLFieldSetElement.cpp
@@ -128,8 +128,7 @@ nsHTMLFieldSetElement::Release()
 	if (mRefCnt <= 0) {
     delete this;                                       
     return 0;                                          
-  } else if ((1 == mRefCnt) && mForm) { 
-    mRefCnt = 0;
+  } else if ((1 == mRefCnt) && mForm) {     
     NS_LOG_RELEASE(this, mRefCnt, "nsHTMLFieldSetElement");
     delete this;
     return 0;
