content/html/content/src/nsHTMLLabelElement.cpp
@@ -176,8 +176,7 @@ nsHTMLLabelElement::Release()
 	if (mRefCnt <= 0) {
     delete this;                                       
     return 0;                                          
-  } else if ((1 == mRefCnt) && mForm) { 
-    mRefCnt = 0;
+  } else if ((1 == mRefCnt) && mForm) {     
     NS_LOG_RELEASE(this, mRefCnt, "nsHTMLLabelElement");
     delete this;
     return 0;
