content/html/content/src/nsHTMLTextAreaElement.cpp
@@ -199,8 +199,7 @@ nsHTMLTextAreaElement::Release()
 	if (mRefCnt <= 0) {
     delete this;                                       
     return 0;                                          
-  } else if ((1 == mRefCnt) && mForm) { 
-    mRefCnt = 0;
+  } else if ((1 == mRefCnt) && mForm) {     
     NS_LOG_RELEASE(this, mRefCnt, "nsHTMLTextAreaElement");
     delete this;
     return 0;
