layout/html/content/src/nsHTMLButtonElement.cpp
@@ -169,8 +169,7 @@ nsHTMLButtonElement::Release()
 	if (mRefCnt <= 0) {
     delete this;                                       
     return 0;                                          
-  } else if ((1 == mRefCnt) && mForm) { 
-    mRefCnt = 0;
+  } else if ((1 == mRefCnt) && mForm) {     
     NS_LOG_RELEASE(this, mRefCnt, "nsHTMLButtonElement");
     delete this;
     return 0;
