layout/html/content/src/nsHTMLSelectElement.cpp
@@ -308,8 +308,7 @@ nsHTMLSelectElement::Release()
   if (mRefCnt <= 0) {
     delete this;                                       
     return 0;                                          
-  } else if ((1 == mRefCnt) && mForm) { 
-    mRefCnt = 0;
+  } else if ((1 == mRefCnt) && mForm) {     
     NS_LOG_RELEASE(this, mRefCnt, "nsHTMLSelectElement");
     delete this;
     return 0;
